Fix layout bugs with profile.

--- a/client/styles/base/account.css
+++ b/client/styles/base/account.css
@@ -24,7 +24,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>. */
 	margin-bottom: 2px;
 }
 #main > .account > .profile > .wrap > .text.brawlName {
-	width: 65px;
+	width: 80px;
 }
 #main > .account > .profile > .wrap > .text.friendCode {
 	width: 140px;
